Fix safari too small

--- a/frontend/pages/hosts/details/cards/Policies/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Policies/_styles.scss
@@ -13,7 +13,7 @@
     .data-table__table {
       thead {
         .name__header {
-          width: $col-md;
+          min-width: $col-md;
         }
         .response__header {
           width: 0;
@@ -26,7 +26,7 @@
       tbody {
         tr {
           .name__cell {
-            max-width: 0; // reset to variable width
+            max-width: 0; // sets ellipses
           }
 
           .policy-link {
